<resources>
    <string name="app_name">ConvertidorDeMedidasDeLongitud</string>

    <string name="screen_title">Convertidor de Medidas de Longitud</string><!-- TÍTULO DE MI APP-->
    <string name="input_value_label">Introduzca el valor</string><!-- CAJA DE TEXTO PARA INSERTAR EL VALOR QUE SE DESEA CONVERTIR-->
    <string name="centimeters_label">Centímetros</string><!-- SELECCIONADOR PARA INFORMAR LA UNIDAD DE MEDIDA DEL VALOR INSERTADO: CENTIMETROS-->
    <string name="inch_label">Pulgadas</string><!-- SELECCIONADOR PARA INFORMAR LA UNIDAD DE MEDIDA DEL VALOR INSERTADO: PULGADAS-->
    <string name="convert_label">Convertir</string><!-- BOTÓN PARA EJECUTAR LA CONVERSIÓN-->

    <string name="cm_to_inch_output">%s centímetros equivalen a %s pulgadas</string><!-- VALOR INSERTADO EN CENTÍMETROS Y CONVERTIDO A PULGADAS: %s para que el código permita definir esos valores después-->
    <string name="inch_to_cm_output">%s pulgadas equivalen a %s centímetros</string><!-- VALOR INSERTADO EN PULGADAS Y CONVERTIDO A CENTÍMETROS: %s para que el código permita definir esos valores después-->
</resources>